<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="startup"
        android:title="@string/settings_startup">

        <rikka.material.preference.MaterialSwitchPreference
            android:key="start_on_boot"
            android:summary="@string/settings_start_on_boot_summary"
            android:title="@string/settings_start_on_boot" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_language">

        <rikka.preference.SimpleMenuPreference
            android:defaultValue="SYSTEM"
            android:key="language"
            android:summary="%s"
            android:title="@string/settings_language" />

        <Preference
            style="?preferenceInformationStyle"
            android:key="translation_contributors"
            android:title="@string/settings_translation_contributors" />

        <Preference
            android:key="translation"
            android:title="@string/settings_translation" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="user_interface"
        android:title="@string/settings_user_interface">

        <moe.shizuku.manager.settings.IntegerSimpleMenuPreference
            android:entries="@array/night_mode"
            android:entryValues="@array/night_mode_value"
            android:key="night_mode"
            android:summary="%s"
            android:title="@string/dark_theme" />

        <rikka.material.preference.MaterialSwitchPreference
            android:key="black_night_theme"
            android:summary="@string/settings_black_night_theme_summary"
            android:title="@string/settings_black_night_theme" />

        <moe.shizuku.manager.settings.IntegerSimpleMenuPreference
            android:defaultValue="0"
            android:entries="@array/theme_color_source"
            android:entryValues="@array/theme_color_source_value"
            android:key="theme_color_source"
            android:summary="%s"
            android:title="@string/settings_theme_color_source" />

        <Preference
            android:key="custom_theme_color"
            android:title="@string/settings_custom_theme_color" />

        <!-- 自定义背景：默认 / 纯色 / 图像。下面的子选项按所选模式显示 -->
        <moe.shizuku.manager.settings.IntegerSimpleMenuPreference
            android:defaultValue="0"
            android:entries="@array/background_mode"
            android:entryValues="@array/background_mode_value"
            android:key="background_mode"
            android:summary="%s"
            android:title="@string/settings_background" />

        <Preference
            android:key="background_color"
            android:summary="@string/settings_background_color_summary"
            android:title="@string/settings_background_color" />

        <Preference
            android:key="custom_background"
            android:summary="@string/settings_custom_background_summary"
            android:title="@string/settings_custom_background" />

        <SeekBarPreference
            android:defaultValue="70"
            android:key="background_brightness"
            android:max="100"
            android:title="@string/settings_background_brightness"
            app:min="0"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="0"
            android:key="background_blur_intensity"
            android:max="100"
            android:title="@string/settings_background_blur"
            app:min="0"
            app:showSeekBarValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
